Updated application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@ eureka.instance.hostname=localhost
 
 #whenever we have multiple eureka discovery services to achieve high availability we need to set it as true
 #we are setting it to false, so that it acts as standalone discovery service
-eureka.client.register-with-eureka=false
+eureka.client.registerWithEureka=false
 
 #It is standalone deiscovery service, so it is referring to itself. 
 #Otherwise we need to mention the discovery service which acts as main discovery service
-eureka.client.service-url.defaultZone = http://${eureka.instance.hostname}:${server.port}/eureka
+eureka.client.serviceUrl.defaultZone = http://${eureka.instance.hostname}:${server.port}/eureka/
 
